# svm-hash-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: lib.rs  merkle.rs  sha2.rs
src/merkle/: bytemuck.rs  mod.rs
