[package]
name = "svm-hash"
description = "Solana-compatible hashing and Merkle tree utilities"
version = "0.1.0-beta.2"

edition = "2021"
homepage = "https://doublezero.xyz"
keywords = ["solana", "hash", "merkle"]
license = "Apache-2.0"
repository = "https://github.com/doublezerofoundation/svm-hash-rs"
rust-version = "1.83"

[dependencies]
bytemuck = { optional = true, version = "1.23", features = ["derive"]}
solana-hash = "2"
solana-sha256-hasher = "2"

[features]
default = []
bytemuck = ["dep:bytemuck", "solana-hash/bytemuck"]

[package.metadata.docs.rs]
all-features = true
